bugfix to prevent shower thoughts content from overlapping button

--- a/css/index.css
+++ b/css/index.css
@@ -154,7 +154,7 @@ p {
     line-height: 1.6;
     border-top: 1px solid #f0f0f0;
     text-align: center;
-    height: 80px;
+    min-height: 80px;
 }
 
 .thought-display {
